fixed hover on mobile divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,8 +50,8 @@ header {
     width: 80%;
 }
 
-.overlay:hover {
-    background: rgba(0, 0, 0, 0.65);
+.add-box:hover {
+    background: rgba(0, 0, 0, 0.55);
 }
 
 .heading {
